--- a/templates/index.html
+++ b/templates/index.html
@@ -142,6 +142,7 @@
             <div class="link-row">
                 <a href="/wordlist">View Word List</a>
                 <a href="/stats">View Stats</a>
+                <a href="/leader">View Leaders</a>
             </div>
             <form method="post" action="/profile" style="display: inline; margin-top: 10px;">
                 <button type="submit" name="clear_session">Clear Session</button>
@@ -160,6 +161,7 @@
                 <div class="link-row">
                     <a href="/wordlist">View Word List</a>
                     <a href="/stats">View Stats</a>
+                    <a href="/leader">View Leaders</a>
                 </div>
             </div>
             <p id="message"></p>
