--- a/templates/index.html
+++ b/templates/index.html
@@ -154,6 +154,7 @@
                 <a href="/wordlist">Words</a>
                 <a href="/stats">Stats</a>
                 <a href="/leader">Leaders</a>
+                <a href="/memes">Memes</a>
             </div>
             <form method="post" action="/profile" style="display: inline; margin-top: 10px;">
                 <button type="submit" name="clear_session">Clear Session</button>
@@ -173,6 +174,7 @@
                     <a href="/wordlist">Words</a>
                     <a href="/stats">Stats</a>
                     <a href="/leader">Leaders</a>
+                    <a href="/memes">Memes</a>
                 </div>
             </div>
             <p id="message"></p>
