--- a/templates/memes.html
+++ b/templates/memes.html
@@ -87,12 +87,8 @@
             color: #263238;
             width: 50px;
         }
-        .meme-table .meme-url {
-            font-weight: bold;
-            width: 300px;
-        }
         .meme-table .meme-description {
-            width: 400px;
+            width: 700px; /* Increased width to accommodate link */
         }
         .meme-table .meme-download-counts {
             width: 150px;
@@ -117,9 +113,6 @@
                 padding: 3px;
                 font-size: 12px;
             }
-            .meme-table .meme-url {
-                width: auto;
-            }
             .meme-table .meme-description {
                 width: auto;
             }
@@ -136,7 +129,6 @@
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>URL</th>
                     <th>Description</th>
                     <th>Download Counts</th>
                 </tr>
@@ -145,8 +137,7 @@
                 {% for meme in memes %}
                     <tr>
                         <td class="meme-id">{{ meme.meme_id }}</td>
-                        <td class="meme-url"><a href="{{ meme.meme_url }}" target="_blank">{{ meme.meme_url }}</a></td>
-                        <td class="meme-description">{{ meme.meme_description }}</td>
+                        <td class="meme-description"><a href="{{ meme.meme_url }}" target="_blank">{{ meme.meme_description }}</a></td>
                         <td class="meme-download-counts">{{ meme.meme_download_counts }}</td>
                     </tr>
                 {% endfor %}
