--- a/templates/admin.html
+++ b/templates/admin.html
@@ -133,6 +133,9 @@
         .meme-table .meme-download-counts {
             width: 150px;
         }
+        .meme-table .meme-url {
+            width: 300px;
+        }
         .user-table .actions, .meme-table .actions {
             width: 200px;
             text-align: center;
@@ -184,7 +187,7 @@
                 padding: 3px;
                 font-size: 12px;
             }
-            .user-table .password, .meme-table .meme-description {
+            .user-table .password, .meme-table .meme-description, .meme-table .meme-url {
                 width: auto;
             }
             .meme-table .meme-type {
@@ -275,6 +278,7 @@
                         <th>ID</th>
                         <th>Type</th>
                         <th>Description</th>
+                        <th>URL</th>
                         <th>Download Counts</th>
                         <th colspan="2">Actions</th>
                     </tr>
@@ -285,6 +289,7 @@
                             <td class="meme-id">{{ meme.meme_id }}</td>
                             <td class="meme-type">{{ meme.type }}</td>
                             <td class="meme-description">{{ meme.meme_description }}</td>
+                            <td class="meme-url">{{ meme.meme_url }}</td>
                             <td class="meme-download-counts">{{ meme.meme_download_counts }}</td>
                             <td>
                                 <button class="edit-btn" onclick="toggleEdit('edit-form-meme-{{ loop.index }}', '{{ meme.meme_id }}', '{{ meme.type }}', '{{ meme.meme_description }}', '{{ meme.meme_download_counts }}', this)">Edit</button>
@@ -297,11 +302,12 @@
                             </td>
                         </tr>
                         <tr class="edit-form" id="edit-form-meme-{{ loop.index }}" style="display: none;">
-                            <td colspan="6">
+                            <td colspan="7">
                                 <form method="POST">
                                     <input type="hidden" name="edit_meme_id" value="{{ meme.meme_id }}">
                                     <input type="text" name="new_type" placeholder="New Type" value="{{ meme.type }}" required>
                                     <input type="text" name="new_description" placeholder="New Description" value="{{ meme.meme_description }}" required>
+                                    <input type="text" name="new_meme_url" placeholder="New URL" value="{{ meme.meme_url }}" required>
                                     <input type="number" name="new_download_counts" placeholder="Download Counts" value="{{ meme.meme_download_counts }}" min="0" required>
                                     <button type="submit" class="save-btn" name="save_meme">Save</button>
                                 </form>
@@ -309,17 +315,18 @@
                         </tr>
                     {% endfor %}
                     <tr>
-                        <td colspan="6">
+                        <td colspan="7">
                             <button class="add-btn" onclick="toggleEdit('add-form-meme', '', '', '', '', this)">Add Meme</button>
                         </td>
                     </tr>
                     <tr class="edit-form" id="add-form-meme" style="display: none;">
-                        <td colspan="6">
+                        <td colspan="7">
                             <form method="POST">
                                 <input type="hidden" name="add_meme" value="true">
                                 <input type="number" name="new_meme_id" placeholder="Meme ID" value="{{ next_meme_id }}" required>
                                 <input type="text" name="new_type" placeholder="New Type" required>
                                 <input type="text" name="new_description" placeholder="New Description" required>
+                                <input type="text" name="new_meme_url" placeholder="New URL" required>
                                 <input type="number" name="new_download_counts" placeholder="Download Counts" min="0" value="0" required>
                                 <button type="submit" class="save-btn" name="save_meme">Save</button>
                             </form>
